fix glitchy effects on mobile

--- a/assets/sass/general.scss
+++ b/assets/sass/general.scss
@@ -71,13 +71,15 @@ footer {
 
 .noise-bg {
     position: fixed;
-    top: -100%;
-    left: -100%;
-    width: 400%;
-    height: 400%;
+    top: -50%;
+    left: -50%;
+    right: -50%;
+    bottom: -50%;
+    width: 200%;
+    height: 200vh;
     background: transparent url('/img/noise-transparent.png') repeat 0 0;
     background-repeat: repeat;
-    animation: noise-bg-animation 0.1s infinite;
+    animation: noise-bg-animation 0.5s infinite;
     z-index: -101;
 }
 
@@ -124,9 +126,9 @@ $cube-color: $color-text;
         width: 100%;
         height: 100%;
         transform-origin: center center;
-        border: 1px solid rgba( $cube-color, 0.4 );
-        background-color: rgba( $cube-color, 0.8 );
-        box-shadow: rgba( $cube-color, 1 ) 0px 0px 100px 15px;
+        border: 1px solid rgba($color-background, 0.4);
+        background-color: rgba($cube-color, 0.8);
+        box-shadow: rgba($cube-color, 1) 0 0 128px 0;
     }
 
     .back {
